Fix button width issue on Firefox and Safari

--- a/src/style.css
+++ b/src/style.css
@@ -95,6 +95,7 @@ body, .mapboxgl-popup-content {
     vertical-align: top;
     background: #FFF;
     padding: 0.5rem 0.8rem;
+    box-sizing: content-box;
     box-shadow: #bbbbbbbb 0.2rem 0.2rem 0.4rem;
     clip-path: inset(-0.5rem -0.5rem -0.5rem 0);
     transition: padding-left 0.2s;
@@ -203,13 +204,16 @@ body, .mapboxgl-popup-content {
 }
 
 /* Theme color from https://coolors.co/palette/e3f2fd-bbdefb-90caf9-64b5f6-42a5f5-2196f3-1e88e5-1976d2-1565c0-0d47a1 */
-
 a {
     color: #0D47A1;
 }
 
 a:visited {
     color: #64B5F6;
+}
+
+.mapboxgl-ctrl-attrib a:visited {
+    color: initial;
 }
 
 label[for] {
@@ -242,7 +246,6 @@ footer {
     font-size: 0.9rem;
     line-height: 1.2;
     max-width: 50em;
-    font-weight: lighter;
 }
 
 a.footnote {
